added readme.md and some minor changes in code.

--- a/RobertBoschTest/templates/quiz.html
+++ b/RobertBoschTest/templates/quiz.html
@@ -9,8 +9,9 @@
 {% if result %}
 <p><h4>{{ result }}</h4></p>
     <a href="/quiz/">Click Here to Start Again</a>
-    {% for result in data %}
-    {{ result }}
+    {% for question, answer in data.items %}
+    {{ question }}
+    {{ answer }}
     {% endfor %}
 {% endif %}
 <hr>
